objects/Sales_Report__c.object
<CustomObject>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_date__c</fullName>
        <label>Report date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Revenue__c</fullName>
        <label>Sales Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Share_record_with_Manager__c</fullName>
        <label>Share record with Manager</label>
    </sharingReasons>
</CustomObject>